RESOLVED FIXED 264721
[MSE] SourceBuffer incorrectly emits error when timestamps are negative
https://bugs.webkit.org/show_bug.cgi?id=264721
Summary [MSE] SourceBuffer incorrectly emits error when timestamps are negative
Jean-Yves Avenard [:jya]
Reported 2023-11-12 22:12:46 PST
In SourceBufferPrivate we can read: ``` // If the decode timestamp is less than the presentation start time, then run the end of stream // algorithm with the error parameter set to "decode", and abort these steps. // NOTE: Until <https://www.w3.org/Bugs/Public/show_bug.cgi?id=27487> is resolved, we will only check // the presentation timestamp. ``` This isn't in the spec. The bug linked to referred to https://dvcs.w3.org/hg/html-media/rev/cb96bc1c87c3 in 2014 which drops the requirement. The was dead code anyway, as the steps prior are about dropping frames that are outside the WindowAppend range, so "If the decode timestamp is less than the presentation start time" will always be false. This allows to drop the sourceBufferPrivateStreamEndedWithDecodeError callback. [1] https://searchfox.org/wubkat/rev/6e975c79b0d4766d80b0421a6dedeae64ca84b63/Source/WebCore/platform/graphics/SourceBufferPrivate.cpp#1020-1029
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-12 22:16:31 PST
Jean-Yves Avenard [:jya]
Comment 2 2023-11-12 22:20:51 PST
EWS
Comment 3 2023-11-13 02:54:03 PST
Committed 270631@main (711b192dda30): <https://commits.webkit.org/270631@main> Reviewed commits have been landed. Closing PR #20401 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.