[MSE] SourceBuffer incorrectly emits error when timestamps are negative https://bugs.webkit.org/show_bug.cgi?id=264721 rdar://118315768

Reviewed by Youenn Fablet.

This wasn't in the spec.
The bug linked to in the comment referred to https://dvcs.w3.org/hg/html-media/rev/cb96bc1c87c3 in 2014 which drops the requirement.

It was dead code, as the steps prior are about dropping frames that are outside the WindowAppend range, so "If the decode timestamp is less than the presentation start time" will always be false.

Covered by existing tests.

* Source/WebCore/Modules/mediasource/SourceBuffer.cpp:
(WebCore::SourceBuffer::sourceBufferPrivateStreamEndedWithDecodeError): Deleted.
* Source/WebCore/Modules/mediasource/SourceBuffer.h:
* Source/WebCore/platform/graphics/SourceBufferPrivate.cpp:
(WebCore::SourceBufferPrivate::processMediaSample):
* Source/WebCore/platform/graphics/SourceBufferPrivateClient.h:
* Source/WebKit/GPUProcess/media/RemoteSourceBufferProxy.cpp:
(WebKit::RemoteSourceBufferProxy::sourceBufferPrivateStreamEndedWithDecodeError): Deleted.
* Source/WebKit/GPUProcess/media/RemoteSourceBufferProxy.h:
* Source/WebKit/WebProcess/GPU/media/SourceBufferPrivateRemote.cpp:
(WebKit::SourceBufferPrivateRemote::sourceBufferPrivateStreamEndedWithDecodeError): Deleted.
* Source/WebKit/WebProcess/GPU/media/SourceBufferPrivateRemote.h:
* Source/WebKit/WebProcess/GPU/media/SourceBufferPrivateRemote.messages.in:

Canonical link: https://commits.webkit.org/270631@main